force-app/main/default/objects/Bloco__c/Bloco__c.object-meta.xml
<CustomObject>
    <description>Agrupa as unidades cadastradas por empreendimento.</description>
    <label>Torre</label>
    <nameField>
        <label>Nome da torre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torres</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>