force-app/main/default/objects/Bloco__c/fields/ApartamentosPorAndar__c.field-meta.xml
<CustomField>
    <fullName>ApartamentosPorAndar__c</fullName>
    <label>Apartamentos por Andar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>