force-app/main/default/objects/Bloco__c/fields/ChaveExterna__c.field-meta.xml
<CustomField>
    <fullName>ChaveExterna__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Indique a chave externa deste bloco.</description>
    <externalId>true</externalId>
    <label>Chave externa</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>