force-app/main/default/objects/Bloco__c/fields/DataLancamento__c.field-meta.xml
<CustomField>
    <fullName>DataLancamento__c</fullName>
    <label>Data de Lançamento</label>
    <type>Date</type>
</CustomField>