force-app/main/default/objects/Bloco__c/fields/Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Empreendimento__c</fullName>
    <label>Empreendimento</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipName>Blocos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>