force-app/main/default/objects/Bloco__c/fields/MetragemTotalDasUnidades__c.field-meta.xml
<CustomField>
    <fullName>MetragemTotalDasUnidades__c</fullName>
    <label>Metragem total das unidades</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>