force-app/main/default/objects/Bloco__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <description>Observação do bloco</description>
    <label>Observação</label>
    <length>250</length>
    <type>Text</type>
</CustomField>