force-app/main/default/objects/Bloco__c/fields/QuadroDeArea__c.field-meta.xml
<CustomField>
    <fullName>QuadroDeArea__c</fullName>
    <label>Quadro de área</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>