force-app/main/default/objects/Bloco__c/fields/QuantidadeAndares__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeAndares__c</fullName>
    <label>Quantidade de andares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>