force-app/main/default/objects/Bloco__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <description>Tipologia do bloco</description>
    <label>Tipologia</label>
    <length>200</length>
    <type>Text</type>
</CustomField>