force-app/main/default/objects/Bloco__c/fields/TotalDeUnidades__c.field-meta.xml
<CustomField>
    <fullName>TotalDeUnidades__c</fullName>
    <label>Total de Unidades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>